--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 
 <html>
 <title>Shluffy's PS99 API Tools</title>
-
-
+<body>
+<div="container">
+<center>
+  <h2>Shluffy's PS99 API Tools</h2>
+  <br><br>
+<p id="information">
+  Shluffy's PS99 API Tools use the Pet Simulator 99 API
+</p>
+<p id="buttons">
+  <button onclick = "alert("boop")">boop</button>
+  <button onclick = "alert("boop")">boop</button>
+  <button onclick = "alert("boop")">boop</button>
+</p>
+</center>
+</div>
+</body>
 </html>
