add footer + credit biggames

--- a/index.html
+++ b/index.html
@@ -18,4 +18,9 @@
 </center>
 </div>
 </body>
+
+
+<footer>
+  <p>Credits to Big Games for the usage of their API for this project.</p>
+</footer>
 </html>
