--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </body>
 
 
-<footer>
-  <p>Credits to Big Games for the usage of their API for this project.</p>
-</footer>
+<footer><center>
+  <p>Credits to Big Games for the usage of their API for this project • <a href="discord.gg/biggames">discord.gg/biggames<a></p>
+</center></footer>
 </html>
