--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
 
 <footer><center>
-  <p>Credits to Big Games for the usage of their API for this project • <a href="discord.gg/biggames">discord.gg/biggames<a></p>
+  <p>Credits to Big Games for the usage of their API for this project • <a href="https://discord.gg/biggames">discord.gg/biggames<a></p>
 </center></footer>
 </html>
