--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <!--stylesheets -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel = "stylesheet" type="text/css" href="resources/css/stylesheet.css">
 
 <title>Shluffy's PS99 API Tools</title>
@@ -15,9 +15,9 @@
   Shluffy's PS99 API Tools use the Pet Simulator 99 API
 </p>
 <p id="buttons">
-  <button onclick = "alert("boop")">boop</button>
-  <button onclick = "alert("boop")">boop</button>
-  <button onclick = "alert("boop")">boop</button>
+  <button onclick = alert("boop")>boop</button>
+  <button onclick = alert("boop")>boop</button>
+  <button onclick = alert("boop")>boop</button>
 </p>
 </center>
 </div>
