--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   Shluffy's PS99 API Tools use the Pet Simulator 99 API
 </p>
 <p id="buttons">
-  <button onclick = alert("boop")>boop</button>
-  <button onclick = alert("boop")>boop</button>
-  <button onclick = alert("boop")>boop</button>
+  <button onclick = 'alert("boop")'>boop</button>
+  <button onclick = 'alert("boop")'>boop</button>
+  <button onclick = 'alert("boop")'>boop</button>
 </p>
 </center>
 </div>
