--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 <div="container">
 <center>
+  <br>
   <h2>Shluffy's PS99 API Tools</h2>
   <br><br>
 <p id="information">
-  Shluffy's PS99 API Tools use the Pet Simulator 99 API
+  Shluffy's Pet Simulator 99 Tools use the Pet Simulator 99 API (created and maintained by Big Games) to pull information on various things, such as clans. This project is currently under development. New functions using the API will be released one by one.
 </p>
 <p id="buttons">
   <button onclick = 'alert("boop")'>boop</button>
