--- a/index.html
+++ b/index.html
@@ -28,4 +28,11 @@
 <footer><div id="footer-content"></div><center>
   <p>Credits to Big Games for the usage of their API for this project • <a href="https://discord.gg/biggames">discord.gg/biggames</a></p>
 </center></div></footer>
+
+<style>
+  body {
+  margin: 25px 50px;
+  }
+</style>
+
 </html>
