--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </p>
 <p id="buttons">
   <button onclick = 'alert("boop")'>boop</button>
-  <button onclick = 'alert("boop")'>boop</button>
-  <button onclick = 'alert("boop")'>boop</button>
+  <button type="button" class="btn btn-light" onclick = 'alert("boop bruh")'>boop</button>
+  <button type="button" class="btn btn-light" onclick='alert(prompt("testing?"))'>testing</button>
 </p>
 </center>
 </div>
