--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   Shluffy's Pet Simulator 99 Tools use the Pet Simulator 99 API (created and maintained by Big Games) to pull information on various things, such as clans. This project is currently under development. New functions using the API will be released one by one.
 </p>
 <p id="buttons">
-  <button onclick = 'alert("boop")'>boop</button>
   <button type="button" class="btn btn-info" onclick = 'alert("This feature is coming soon!")'>[Coming Soon] Lookup a Clan</button>
+  <button type="button" class="btn btn-warning" onclick='alert("Coming soon!")'>Coming Soon!</button>
   <button type="button" class="btn btn-warning" onclick='alert("Coming soon!")'>Coming Soon!</button>
 </p>
 </center>
