--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html><head>
 <!--stylesheets -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel = "stylesheet" type="text/css" href="resources/css/stylesheet.css">
-
+<script type="text/javascript" src="shluffy.github.io/ShluffysPetSim99ApiTools/resources/js/clanlook.js"></script>
 <title>Shluffy's PS99 API Tools</title>
-<body>
+</head><body>
 <div="container">
 <center>
   <h2>Shluffy's PS99 API Tools</h2>
