--- a/tools/clanlookup.html
+++ b/tools/clanlookup.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
-
+<html><head>
+<!--stylesheets -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel = "stylesheet" type="text/css" href="resources/css/stylesheet.css">
+<script type="text/javascript" src="https://shluffy.github.io/ShluffysPetSim99ApiTools/resources/js/clanlookup.js"></script>
+<title>Clan Lookup</title>
+</head>
 
 
 
