--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </body>
 
 
-<footer><div id="footer-content"></div><center>
+<footer><div id="footer-content"><center>
   <p>Credits to Big Games for the usage of their API for this project • <a href="https://discord.gg/biggames">discord.gg/biggames</a></p>
 </center></div></footer>
 
