--- a/tools/clanlookup.html
+++ b/tools/clanlookup.html
@@ -9,7 +9,7 @@
 
 
 
-<footer><div id="footer-content"></div><center>
+<footer><div id="footer-content"><center>
   <p>Credits to Big Games for the usage of their API for this project • <a href="https://discord.gg/biggames">discord.gg/biggames</a></p>
 </center></div></footer>
 
