--- a/tools/clanlookup.html
+++ b/tools/clanlookup.html
@@ -7,7 +7,18 @@
 <title>Clan Lookup</title>
 </head>
 
-
+<div="container">
+<center>
+  <h2>Shluffy's PS99 API Tools - Clan Lookup</h2>
+<p id="information">
+  Clan lookup. Click the button below.
+</p>
+<p id="buttons">
+  <button type="button" class="btn btn-warning" onclick='ftchClanInfo(prompt("What clan do you want me to lookup?"))'>Coming Soon!</button>
+</p>
+</center>
+</div>
+</body>
 
 <footer><div id="footer-content"><center>
   <p>Credits to Big Games for the usage of their API for this project • <a href="https://discord.gg/biggames">discord.gg/biggames</a></p>
