--- a/tools/clanlookup.html
+++ b/tools/clanlookup.html
@@ -10,7 +10,7 @@
 <center>
   <h2>Shluffy's PS99 API Tools - Clan Lookup</h2>
 <p id="information">
-  Clan lookup. Click the button below.
+  Clan lookup. Click the button below and enter a clan ID (like "GOOP").
 </p>
 <p id="buttons">
   <button type="button" class="btn btn-warning" onclick='ftchClanInfo(prompt("What clan do you want me to lookup?"))'>Coming Soon!</button>
